# rl_project

./: .gitignore  01_direct.ipynb  02_curriculum.ipynb  02_curriculum_catastrophic_learning.ipynb  03_auto_curriculum_frontier.ipynb  pyproject.toml
results/00_direct_training_failure_20251028_181546/: evaluations.csv
results/01_curriculum_learning_catastrophic_learning_test_20251031_222928/: evaluations.csv
results/02_auto_curriculum_learning_frontier_capped_20251031_200801/: evaluations.csv
results/curriculum_learning_20251028_132541_catastrophic_learning/: evaluations.csv
results/curriculum_learning_20251028_174618/: evaluations.csv
src/: cnn.py  comparison_plots.py  dataclass.py  environment.py  episode_visualization.py  evaluation.py  filemanager.py
