[project]
name = "rl-curriculum-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "minigrid>=3.0.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pygame>=2.6.1",
    "scipy>=1.11.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "experiments", "tests"]
